--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,4 @@
-body {
+div#wrapper {
   width: 700px;
   margin: 0 auto;
   padding-top: 20px;
@@ -15,6 +15,14 @@ header h3 {
   margin-bottom: 0;
   line-height: 40px;
   padding-bottom: 19px;
+}
+
+.cart {
+  float: right;
+}
+
+.cart .items {
+  margin-top: 5px;
 }
 
 #container {
