#passing port in normalized_date, some code review

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,7 @@ div#wrapper {
 
 header {
   border-bottom: 1px solid #e5e5e5;
+  font-size: 13px;
 }
 
 header h3 {
@@ -29,7 +30,16 @@ header h3 {
   padding: 15px 0 15px 0;
 }
 
+div.company {
+  float: left;
+}
+
+div.links {
+  float: right;
+}
+
 footer {
+  font-size: 13px;
   padding-top: 19px;
   color: #777;
   border-top: 1px solid #e5e5e5;
